# tchrs-transformer

./: Cargo.toml  LICENSE  README.md
examples/run-albert/: main.rs  tokenization.rs  wikitext.rs
src/: attention.rs  block.rs  download.rs  embeddings.rs  lib.rs  models.rs  positional_encoding.rs  training.rs  utils.rs
src/attention/: general.rs  nystrom.rs  standard.rs
src/models/: albert.rs
src/training/: mlm.rs  schedulers.rs
